# team-9-backend-stammdaten-studieneinheiten

./: .dockerignore  .editorconfig  .gitignore  DOCKERFILE  Dockerfile  README.md  checkstyle.xml  create_migration.ps1  pom.xml  pyproject.toml
.github/workflows/: deploy-application.yaml  test.yml
alembic/: env.py
alembic/versions/: 0d9b5eb4c915_course_of_study.py  185dc935bd5d_added_cohort_attribute_to_course_of_.py  4b54558c7c31_add_teacher_student_tables.py  68fd60694c89_cascade_delete.py  714b4067d80d_add_mock_student_data.py  714b4067d80d_add_mock_student_teacher_data.py  a83cc04f838f_module_stuff.py  b63eb3df4064_courseofstudy.py  c352d6a678a5_cascade_for_cos_instance.py  cc83f56f9c70_update_test_user_uuids.py  cede83452acd_cascade_delete_on_cos.py  dc5173457e54_studentendpoint.py  de680605cecb_remove_relation.py  initial_schema.py
app/: main.py
app/api/: __init__.py  course_templates.py  courseofstudy.py  courseofstudy_templates.py  courses.py  module.py  module_templates.py  outside_connections.py  students.py  teachers.py
app/core/: db.py  middleware.py
app/models/: __init__.py  association_tables.py  course.py  course_template.py  courseofstudy_templates.py  coursesofstudy.py  module.py  module_templates.py  modules_template.py  students.py  teachers.py
app/repositories/: course_of_study_repository.py  courseofstudy_template_repository.py  (+5 more)
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
tests/: conftest.py  test_course_templates.py  test_courseofstudy_templates.py  test_courses.py  test_module_templates.py  test_modules.py
(+23 files in other folders)
